name:               koji-progress
version:            0.2.0
synopsis:           Checks build progress of a koji task

-- description:
license:            GPL-3
license-file:       LICENSE
author:             Jens Petersen
maintainer:         petersen@redhat.com

-- copyright:
-- category:
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >=1.10

executable koji-progress
  main-is:          src/Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends: base >=4 && <5
               , bytestring
               , filepath
               , format-numbers
               , http-client
               , http-directory
               , koji
               , simple-cmd
               , simple-cmd-args >= 0.1.4
               , text

  -- hs-source-dirs:
  default-language: Haskell2010
  ghc-options:      -fwarn-missing-signatures -Wall -threaded
